[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "didcomm"
version = "1.0.0"
description = "DIDComm пакет для работы с децентрализованной идентичностью и сообщениями (Ethereum/secp256k1, ECDSA)"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=41.0.0",
    "eth-account>=0.13.0",
    "eth-keys>=0.7.0",
    "eth-typing>=5.2.0",
    "eth-utils>=5.3.0",
    "mnemonic>=0.21",
]

[tool.setuptools.packages]
find = { include = ["didcomm"] }

[tool.setuptools.package-dir]
didcomm = "."
